fix vertretungsplan cell spacing

--- a/src/scss/widgets/_vertretungsplan.scss
+++ b/src/scss/widgets/_vertretungsplan.scss
@@ -2,7 +2,6 @@
 
   // overwrite styles on smaller screens
   padding: .5rem !important;
-  padding-right: .25rem !important;
 
   text-align: center;
   font-weight: 300 !important;
